--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="shortcut icon" href="data:image/x-icon;," type="image/x-icon">
+  <link rel="stylesheet" href="style.css">
 
   <head>
     <!-- Required meta tags -->
@@ -12,47 +14,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous"> 
-  <title>admin scripts</title>
-</head>
-<body>
-  <h1 class="text-center">Administrative Scripts</h1>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous">
+    <title>admin scripts</title>
+  </head>
 
-<div id="accordion">
-</div>
+  <body>
+    <h1 class="text-center">Administrative Scripts</h1>
 
-  <div class="jumbotron">
-  <h1 class="display-4">Script Output:</h1>
-  <p class="lead">This is the output from the script:</p>
-  <hr class="my-4">
-  <p>SAMPLE OUTPUT
-<br><br>
-akfnklnlknsglknlk;sgnalkndslkg;nalkdsnglk;nglknalkdsng
-ksdnglknalkgsnlndlgknlksagansdlkgnlkansdlkgnlkasndlkgnalkdsgn
-kasndkglnalkds;lknglkndalks;gnlkansdlkgnlknakdsgnalknlkgns;dnlkdsg
-alkdsgnlkadsnglknlkgdnlkasnlkgnlkgdsnkalsndgklndslkgnksg
-alksdgnklalkgds
-kajnsdlkgnsklgdklng
-jdnjlksg
-sl,mndglknslkgdnlksdgnlk;dsgnlk;dsng;sl;dgl;sdgl;msd
-lkjdnglksndglknsdlkgnslkdgnlkdsnglksndlkgnsdg
+    <div id="accordion">
+    </div>
 
+    <div class="jumbotron">
+      <h5 class="display-5">Script Output:</h5>
+      <p class="lead">python sys.stdout</p>
+      <hr class="my-4">
+      <div id="output-console">
+        <p id="output-text"> > Python Script test output will appear here</p>
+      </div>  
+    </div>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+      crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
+      crossorigin="anonymous"></script>
 
-  </p>
-  <p class="lead">
+    <!-- socket io -->
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+      var socket = io('http://localhost:3000');
+    </script>
 
-  </p>
-</div>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
-<script type="text/javascript" src="code.js"></script>
+    <script type="text/javascript" src="code.js"></script>
+  </body>
 
-  <!-- socket io -->
-  <script src="/socket.io/socket.io.js"></script>
-  <script>
-    var socket = io();
-  </script>
-
-</body>
 </html>
