--- a/public/index.html
+++ b/public/index.html
@@ -14,31 +14,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
-      crossorigin="anonymous">
-    <title>admin scripts</title>
+    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+      crossorigin="anonymous"> -->
+    <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/node_modules/font-awesome/css/font-awesome.min.css">
+    <title>Admin Scripts</title>
   </head>
 
   <body>
-    <h1 class="text-center">Administrative Scripts</h1>
-
-    <div id="accordion">
+    <div class="container">
+      <h1 class="text-center">Administrative Scripts</h1>
+  
+      <div id="accordion"></div>
+  
+      <div class="jumbotron">
+        <div class="jumbotron-headers">
+          <div>
+            <h5 class="display-5">Script Output:</h5>
+            <p class="lead">python sys.stdout</p>
+          </div>
+          <i class="fa fa-trash fa-2x" aria-hidden="true" onclick="clearOutput()" title="clear output in console"></i>
+        </div>
+        <hr class="my-4">
+        <div id="output-console">
+          <p id="output-text"> > Python Script test output will appear here</p>
+        </div>  
+      </div>
     </div>
 
-    <div class="jumbotron">
-      <h5 class="display-5">Script Output:</h5>
-      <p class="lead">python sys.stdout</p>
-      <hr class="my-4">
-      <div id="output-console">
-        <p id="output-text"> > Python Script test output will appear here</p>
-      </div>  
-    </div>
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
       crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
       crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
-      crossorigin="anonymous"></script>
+      crossorigin="anonymous"></script> -->
+
+    <script src="/node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="/node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="/node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 
     <!-- socket io -->
     <script src="/socket.io/socket.io.js"></script>
